// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu renders correctly 1`] = `
<div>
  <nav
    class="group fixed z-30 inset-y-0 left-xs w-full p-md pt-xl ease-linear duration-100 translate-y-[-20px] opacity-0 invisible md:translate-y-0 md:translate-y-[-20px] md:visible md:opacity-100 md:top-md md:right-md md:bottom-auto md:left-auto md:w-auto md:p-0 md:pt-md md:text-right"
    data-testid="menu"
  >
    <h2
      class="my-xs uppercase text-xs text-grey/80 cursor-default"
    >
      Projects
    </h2>
    <ul
      class="leading-5 group-hover:bg-transparant-white invisible ease-linear duration-100 translate-y-[-20px] group-hover:visible group-hover:translate-y-0"
    >
      <a>
        My First Project
      </a>
      <a>
        Project without a statement
      </a>
      <a>
        Archived project
      </a>
    </ul>
  </nav>
</div>
`;

exports[`Menu renders correctly when open 1`] = `
<div>
  <nav
    class="group fixed z-30 inset-y-0 left-xs w-full p-md pt-xl ease-linear duration-100 bg-transparant-white translate-y-0 opacity-100 visible md:translate-y-0 md:translate-y-[-20px] md:visible md:opacity-100 md:top-md md:right-md md:bottom-auto md:left-auto md:w-auto md:p-0 md:pt-md md:text-right"
    data-testid="menu"
  >
    <h2
      class="my-xs uppercase text-xs text-grey/80 cursor-default"
    >
      Projects
    </h2>
    <ul
      class="leading-5 group-hover:bg-transparant-white"
    >
      <a>
        My First Project
      </a>
      <a>
        Project without a statement
      </a>
      <a>
        Archived project
      </a>
    </ul>
  </nav>
</div>
`;
